# extremely_overengineered_airbnb

./: MICROSERVICE_TEMPLATE.md  README.md
auth_service/: .dockerignore  main.py  pyproject.toml
auth_service/infra/docker/: Dockerfile
auth_service/infra/k8s/manifests/: configmap.yaml  deploy.yaml  ingress.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
auth_service/src/adapters/persistence/: database.py  password_hasher.py  repository.py
auth_service/src/adapters/persistence/models/_sqlalchemy/: user.py
auth_service/src/adapters/rest/v1/DTOs/: error.py  user.py
auth_service/src/application/: app.py  config.py
auth_service/src/domain/models/: user.py
auth_service/src/domain/ports/: password_ports.py  user_ports.py
shared-infra/k8s/: README.md  microservices-rbac.yaml  namespace.yaml
shared-infra/k8s/kong/: kong-rbac.yaml  kong-values.yaml
