[project]
name = "auth-service"
version = "0.1.0"
description = "Authentication microservice using hexagonal architecture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.128.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
